--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,9 +8,10 @@ services:
             - '33062:3306'
         environment:
             MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD:?err}
+            MYSQL_DATABASE: guestbook
         volumes:
-            - './database:/var/lib/mysql'
-
+            # - './database:/var/lib/mysql'
+            - "./docker/db/:/docker-entrypoint-initdb.d/"
     php:
         # image: 'php:7.2-fpm'
         build:
